--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ html { box-sizing: border-box; }
 body {
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    color: white;
 }
 
 h2 {
     margin: 0;
     font-family: 'Raleway', sans-serif;
+    color: white;
 }
 
 .paticka {
@@ -40,3 +42,159 @@ notebook/pc:
 */
 
 /* tvoje styly sem */
+
+.hlavni-recept {
+    background-image: url(images/burger.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(images/burger.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.recept2 {
+    background-image: url(images/sushi.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(images/sushi.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.recept3 {
+    background-image: url(images/rajcata.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(images/rajcata.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.recept4 {
+    background-image: url(images/kure.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(images/kure.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.recept5 {
+    background-image: url(images/grilovani.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(images/grilovani.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.doporucujeme {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.hlavni-recept {
+    min-height: 200px; 
+    display: flex;
+    flex-direction: column;
+}
+
+.recept {
+    min-height: 90px;
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid silver;
+}
+
+.recept-meta {
+    font-size: 0.8rem;
+    font-weight: 400;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.recept-kategorie,
+.recept-komentare {
+    flex: 1;
+}
+
+.recept-komentare {
+    text-align: right;
+}
+
+.hlavni-recept.recept-nazev {
+    font-size: 1.75rem;
+    font-weight: 800;
+}
+
+.recept-nazev {
+    font-size: 1.2rem;
+    font-weight: 800;
+    padding: 0.5rem;
+}
+
+@media screen and (min-width: 480px) {
+    .hlavni-recept {
+        min-height: 250px;
+    }
+    .recept {
+        min-height: 150px;
+    }
+    .recept-meta {
+        font-size: 0.8rem;
+        font-weight: 400;
+        padding: 1.25rem;
+    }
+    .hlavni-recept.recept-nazev {
+        font-size: 2rem;
+        font-weight: 800;
+    }
+    .recept-nazev {
+        font-size: 1.5rem;
+        font-weight: 800;
+        padding-left: 1.25rem;
+        padding-bottom: 1.25rem;
+    }
+    .doporucujeme {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .sloupec {
+        flex: 1;
+    }
+    .hlavni-recept {
+        flex-basis: 100%;
+    }
+    .recept2,
+    .recept3 {
+        border-right: 1px solid silver;
+    }
+}
+
+@media screen and (min-width: 860px) {
+    .hlavni-recept {
+        min-height: 400px;
+        border-right: 1px solid silver;
+    }
+    .recept {
+        min-height: 200px;
+    }
+    .recept-meta {
+        font-size: 0.8rem;
+        font-weight: 400;
+        padding: 1.25rem;
+    }
+    .hlavni-recept.recept-nazev {
+        font-size: 3rem;
+        font-weight: 800;
+    }
+    .recept-nazev {
+        font-size: 1.75rem;
+        font-weight: 800;
+        padding-left: 1.25rem;
+        padding-bottom: 1.25rem;
+    }
+    .doporucujeme {
+        flex-direction: row;
+    }
+    .hlavni-recept {
+        flex: 1;
+    }
+    .recept2,
+    .recept4 {
+        border-top: none;
+    }
+}
